[package]
name = "simple-calc"
version = "0.1.0"
authors = ["Laurent Bernabe <laurent.bernabe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.iui]
git = "https://github.com/MOZGIII/libui-rs.git"
features = ["static"]